# Rakhshai-Graph-based-NLP

./: .gitignore  LICENSE  README.fa.md  README.md  app.py  mkdocs.yml  pyproject.toml  requirements-ui.txt  requirements.txt  run_ui.sh  sample_output.txt
.claude/: launch.json
.github/workflows/: ci.yml
benchmarks/: persian_text_classification.csv
data/: ganjoor_sheryar_corpus.jsonl  ganjoor_sheryar_corpus.txt  wiki_fa_50k_LICENSE.md  wiki_fa_test.txt
docs/: api.md  api_usage.md  article_llm.md  graph_lm_v1.md  graph_lm_v2.md  graph_reasoning_core.md  index.md  llm.md  low_data_training_engine.md  mcp.md  mcp_single_poem_evaluation.md  multi_relation_persian_graph.md  persian_tokenizer.md
rakhshai_graph_nlp/: __init__.py  api.py  cli.py  metrics.py
rakhshai_graph_nlp/article_llm/: __init__.py
rakhshai_graph_nlp/explain/: explainer.py
rakhshai_graph_nlp/features/: __init__.py  datasets.py  preprocessing.py  pyg_data.py  text_graph.py  tokenize.py  tokenizer.py
rakhshai_graph_nlp/graphs/: __init__.py  co_occurrence.py  dependency.py  document.py  graph.py  semantic.py  sparse.py  text_graph.py
rakhshai_graph_nlp/llm/: __init__.py
rakhshai_graph_nlp/lm/: __init__.py  augmentation.py  corpus.py  dataset.py  distributed.py  eval.py  graph_builder.py  graph_memory.py  graph_scaling.py  model.py  multitask.py  poem_recommender.py  profiles.py  registry.py  sft.py  shards.py  tokenizer.py  trainer.py
rakhshai_graph_nlp/models/: __init__.py  gat.py  gcn.py  graphsage.py
rakhshai_graph_nlp/tasks/: __init__.py  classification.py  hate_speech.py  recommendation.py  social_analysis.py  summarization.py
rakhshai_graph_nlp/utils/: logging.py  random.py
rakhshai_mcp/: __init__.py  config.py  security.py  server.py
rakhshai_mcp/prompts/: __init__.py  graph_reasoning.py  persian_analysis.py
rakhshai_mcp/resources/: __init__.py  graphs.py  models.py  runs.py
rakhshai_mcp/schemas/: __init__.py  inputs.py  outputs.py
rakhshai_mcp/tools/: __init__.py  analyze.py  common.py  generate.py  graph.py  memory.py  prompting.py  reports.py
runs/compare-baseline-lm/: config.json  metrics.json  model.pt
runs/compare-graph-lm/: metrics.json  model.pt
runs/demo-graph-lm/: config.json  graph_config.json  metrics.json  model.pt  tokenizer.json
runs/latest/: RESULTS.md  pytest-report.txt  summary.json
runs/lowdata-test-20260611/: RESULTS.md
runs/mini-graph-lm-repeat-current/: metrics.json  (+2 more)
scripts/: build_ganjoor_recommender.py  compare_tokenizers.py  download_fa_wiki_sample.py  evaluate_openai_mcp_persian.py
tests/: conftest.py  test_article_llm.py  test_cli.py  test_explain.py  test_features.py  test_gat_speed_equiv.py  test_graph_lm.py  test_graphs.py  test_lm_corpus.py  test_lm_eval.py  test_lm_graph_scaling.py  test_lm_profiles.py  test_lm_sft.py  test_lm_shards.py  test_lm_trainer_scaling.py  test_mcp_tools.py  test_metrics.py  test_models.py  test_persian_tokenization_improvements.py  test_phase_improvements.py  test_public_api.py  test_sparse_graph.py  test_tasks.py  test_text_graph.py  test_tokenize.py
(+413 files in other folders)
