[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rakhshai-graph-nlp"
version = "0.1.0"
description = "Graph-based NLP utilities"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Unknown"}]
requires-python = ">=3.9"
dependencies = ["numpy", "scipy", "regex", "networkx"]

[project.optional-dependencies]
sparse = ["scipy"]
ml = ["scikit-learn"]
fa = ["faiss-cpu"]
docs = ["mkdocs", "mkdocstrings-python"]

[project.scripts]
rgnn-cli = "rakhshai_graph_nlp.cli:main"

[tool.ruff]
line-length = 88

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]

[tool.mypy]
ignore_errors = true
